--- a/pom.xml
+++ b/pom.xml
@@ -55,6 +55,11 @@
   </dependencyManagement>
 
   <dependencies>
+	  <dependency>
+    <groupId>io.prometheus</groupId>
+    <artifactId>client</artifactId>
+    <version>0.0.10</version>
+</dependency>
     <dependency>
       <groupId>io.vertx</groupId>
       <artifactId>vertx-core</artifactId>
